--- a/readme.adoc
+++ b/readme.adoc
@@ -1,14 +1,13 @@
-= Bienvenue dans ce lab Quarkus Ignite
+= Welcome to the Quarkus Ignite Lab
 
-Ce repository contient les éléments suivants :
+This repository contains the following elements:
 
-* La documentation du lab dans le répertoire `doc` pour la générer il suffit de lancer la commande `mvnw` dans le répertoire doc depuis votre terminal. La documentation sera générée dans le répertoire `target/generated-docs`
+Lab documentation in the doc directory. To generate it, simply run the mvnw command in the doc directory from your terminal.
+The documentation will be generated in the target/generated-docs directory.
+TIP: The documentation is also available in the GitHub repository's deliverables at the following address: https://github.com/SCIAM-FR/quarkus-ignite-lab
 
-TIP: la documentation est aussi disponible dans les livrables du repository github à l'adresse : https://github.com/SCIAM-FR/quarkus-iginite-lab
+Elements to complete the lab, including:
+** An Ignite project for creating a cluster in the ignite directory.
+** A series of 3 lab exercises in the tp1-2 and tp3 directories to complete the lab.
 
-* Les éléments pour effectuer le lab sous forme de :
-
-** Un projet ignite permettant de créer un cluster dans le répertoire `ignite`
-** Une série de 3 TP dans les répertoires `tp1-2` et `tp3` permettant de réaliser le lab
-
-Merci de vous référer à la documentation pour plus d'informations sur le lab.
+Please refer to the documentation for more information about the lab.
